<resources>
    <string name="app_name">fiap_1tdsg_gps_permissao_mapa</string>
    <string name="action_settings">Settings</string>
    <string name="busca"> tubaina bar </string>
    <string name="permission">" Grant GPS permission "</string>
    <string name="active">"Enable GPS  "</string>
    <string name="disabled">Disable GPS</string>
    <string name="start">"Start route "</string>
    <string name="finish">Finish route</string>
    <string name="what">"What do you want to find? "</string>
    <string name="time">Past time</string>
    <string name="nogps">Sem GPS não rola</string>
</resources>
