<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="6"
    android:layout_column="2"
    android:layout_margin="30dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_margin="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:background="#F8BBD0 "
        android:padding="10dp"
        android:text="@string/permission" />

    <Button
        android:id="@+id/active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_margin="10dp"
        android:background="#F8BBD0 "
        android:padding="10dp"
        android:text="@string/active" />

    <Button
        android:id="@+id/disabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_columnWeight="1"
        android:layout_margin="10dp"
        android:background="#F8BBD0 "
        android:padding="10dp"
        android:text="@string/disabled" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_margin="10dp"
        android:background="#F8BBD0 "
        android:padding="10dp"
        android:text="@string/start" />

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_columnWeight="1"
        android:layout_margin="10dp"
        android:background="#F8BBD0 "
        android:padding="10dp"
        android:text="@string/finish" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="0"
        android:ems="10"
        android:hint="@string/what"
        android:inputType="textPostalAddress" />


</GridLayout>